# bead

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
bead/: __init__.py  labels.py
bead/active_learning/: config.py
bead/behavioral/: analytics.py  extraction.py
bead/cli/: active_learning_commands.py  config.py  constraint_builders.py  deployment.py  items.py  items_factories.py  layers.py  list_constraints.py  lists.py  main.py  models.py  protocol.py  resource_loaders.py  resources.py  simulate.py  templates.py  training.py
bead/config/: __init__.py  active_learning.py  config.py  defaults.py  deployment.py  item.py  list.py  loader.py  logging.py  model.py  paths.py  profiles.py  protocol.py  resolvers.py  resources.py  serialization.py  simulation.py  template.py
bead/corpus/: __init__.py  assemble.py  base.py  graph.py  pipeline.py  records.py  sources.py
bead/data/: base.py  language_codes.py  metadata.py  range.py  repository.py  serialization.py  validation.py
bead/data_collection/: __init__.py  records.py
bead/deployment/: distribution.py  protocol_trials.py
bead/dsl/: ast.py  evaluator.py  parser.py  stdlib.py
bead/evaluation/: __init__.py  reliability.py
bead/interop/: __init__.py
bead/items/: __init__.py  binary.py  cache.py  categorical.py  cloze.py  constructor.py  forced_choice.py  generation.py  item.py  item_template.py  multi_select.py  ordinal_scale.py  scoring.py  span_labeling.py  spans.py  validation.py
bead/lists/: __init__.py  balancer.py  constraints.py  experiment_list.py  list_collection.py  partitioner.py  stratification.py
bead/participants/: collection.py  metadata_spec.py  models.py
bead/protocol/: __init__.py  anchor.py  context.py  diagnostics.py  drift.py  encoding.py  family.py  items.py  realization.py
bead/resources/: classification.py  constraint_builders.py  constraints.py  lexical_item.py  lexicon.py  loaders.py  template.py  template_collection.py
bead/simulation/: runner.py
bead/templates/: filler.py  resolver.py  strategies.py  streaming.py
bead/tokenization/: __init__.py  config.py  parsers.py  tokenizers.py
bead/transforms/: __init__.py  base.py  morphology.py  text.py
docs/: index.md  installation.md  requirements.txt
docs/api/: active_learning.md  config.md  corpus.md  data_collection.md  deployment.md  dsl.md  evaluation.md  interop.md  labels.md  lists.md  protocol.md  tokenization.md  transforms.md
docs/css/: custom.css  pygments.css
docs/developer-guide/: architecture.md  contributing.md  setup.md  testing.md
docs/user-guide/: concepts.md  configuration.md  index.md  protocols.md
tests/: conftest.py  test_api_docs.py  test_labels.py
tests/behavioral/: test_analytics.py  test_merging.py
tests/cli/: conftest.py  test_constraint_builders.py  test_deployment.py  test_items.py  test_items_factories.py  test_list_constraints.py  test_models.py  test_protocol.py  test_resources.py  test_template_generation.py  test_template_utilities.py  test_training.py
tests/config/: test_config_models.py  test_defaults.py  test_profiles.py  test_protocol_config.py  test_serialization.py  test_simulation_config.py  test_validation.py
tests/corpus/: __init__.py  test_assemble.py  test_graph.py  test_pipeline.py  test_sources.py
tests/data/: conftest.py  test_base.py  test_data_validation.py  test_metadata.py  test_repository.py
tests/data_collection/: test_records.py
tests/dsl/: conftest.py  test_ast.py  test_evaluator.py  test_structural.py
tests/evaluation/: test_reliability.py
tests/integration/: test_task_type_pipeline.py
tests/interop/: __init__.py  test_layers_codec.py  test_layers_codec_entrypoint.py  test_layers_corpus_io.py  test_layers_coverage.py  test_layers_defs.py  test_layers_graph_roundtrip.py  test_layers_item_bridge.py  test_layers_judgment.py  test_layers_lexicon_validation.py  test_layers_list.py  test_layers_parse_iso.py  test_layers_participant.py  test_layers_publish_integration.py  test_layers_record_bridge.py  test_layers_records.py  test_layers_resource.py
tests/items/: conftest.py  test_acceptability_scorer.py  test_binary.py  test_cache.py  test_categorical.py  test_cloze.py  test_constructor.py  test_forced_choice.py  test_free_text.py  test_magnitude.py  test_models.py  test_multi_select.py  test_ordinal_scale.py  test_scoring.py  test_span_labeling.py  test_spans.py  test_validation.py
tests/lists/: conftest.py  test_balancer.py  test_batch_constraints.py  test_constraints.py  test_grid_stratification.py  test_models.py  test_partitioner.py  test_partitioner_batch.py  test_stratification.py
tests/pds/: docker-compose.yml
tests/protocol/: __init__.py  test_anchor.py  test_context.py  test_deployment_bridge.py  test_diagnostics.py  test_drift.py  test_encoding.py  test_end_to_end.py  test_family.py  test_items_bridge.py  test_realization.py
tests/resources/: conftest.py  test_constraint_builders.py  test_constraints.py  test_lexical_item.py  test_lexical_item_class.py  test_lexicon.py  test_loaders.py  test_template.py  test_template_class.py  test_template_collection.py  test_template_generation.py
tests/simulation/: test_integration.py
tests/templates/: conftest.py  test_csp_filler.py  test_mixed_filling.py  test_mlm_strategy.py  test_strategy_filler.py  test_streaming.py
tests/tokenization/: test_parsers.py  test_tokenizers.py
tests/transforms/: test_base.py  test_text.py  (+2 more)
(+154 files in other folders)
